--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@ console.log(me.getLastFeeling()); // How do I feel last time?
   <div id="about" data-4500="top:100%;" data-8000="top:0%;" data-11300="top:0%;" data-14000="top:-100%;" data-16600="top:-100%;" data-16700="top:-200%">
     <h2>ABOUT</h2>
     <div class="wrap">
-      <div class="image"><img_0.jpg></div>
+      <div class="image"><src="img_0.jpg" alt=""></div>
       <div class="textbox">
         <div class="text" data-8500="opacity:1;z-index:10;" data-8800="opacity:0;z-index:0;">
           <h3>あっつん</h3>
