--- a/index.html
+++ b/index.html
@@ -98,8 +98,6 @@ console.log(me.getLastFeeling()); // How do I feel last time?
         </div>
         <ul>
           <li><a href="#about">ABOUT</a></li>
-          <li><a href="#skills">SKILLS</a></li>
-          <li><a href="#works">WORKS</a></li>
           <li><a href="#contact">CONTACT</a></li>
         </ul>
         <span id="navi_marker"
@@ -166,3 +164,51 @@ console.log(me.getLastFeeling()); // How do I feel last time?
         </div>
       </div>
     </div>
+
+ 
+ <div id="contact" data-18800="top:100%;" data-22000="top:0%;">
+    <h2>CONTACT</h2>
+
+    <ul id="links" class="cf">
+      </a></li>
+      <li><a href="https://www.facebook.com/daisuke.atsumi.3" target="_blank">
+        <img src="img/link_facebook.png" alt="facebook" />
+      </a></li>
+      <li><a href="https://github.com/daisuke4696" target="_blank">
+        <img src="img/link_github.png" alt="github" />
+      </a></li>
+      <li><a href="mailto:daisuke.samuser.gmail.com" target="_blank">
+        <img src="img/link_mail.png" alt="mail" />
+      </a></li>
+    </ul>
+
+   <div id="copyright" data-21930="opacity:0;" data-22000="opacity:1;">2014 &copy; yoshiko</div>
+
+   <ul id="share">
+     <li class="twitter"><a href="https://twitter.com/share" class="twitter-share-button" data-url="http://yoshiko-pg.github.io/" data-via="yoshiko_pg">Tweet</a></li>
+
+     <li class="facebook"><iframe src="//www.facebook.com/plugins/like.php?href=http%3A%2F%2Fyoshiko-pg.github.io%2F&amp;width&amp;layout=button_count&amp;action=like&amp;show_faces=false&amp;share=false&amp;height=21" scrolling="no" frameborder="0" style="border:none; overflow:hidden; height:21px;" allowTransparency="true"></iframe></li>
+     <li class="hatena"><a href="http://b.hatena.ne.jp/entry/http://yoshiko-pg.github.io/" class="hatena-bookmark-button" data-hatena-bookmark-layout="standard-balloon" data-hatena-bookmark-lang="ja" title="このエントリーをはてなブックマークに追加"><img src="https://b.st-hatena.com/images/entry-button/button-only@2x.png" alt="このエントリーをはてなブックマークに追加" width="20" height="20" style="border: none;" /></a></li>
+     <li class="github"><iframe src="http://ghbtns.com/github-btn.html?user=yoshiko-pg&repo=yoshiko-pg.github.io&type=watch&count=true" allowtransparency="true" frameborder="0" scrolling="0" width="110" height="20"></iframe></li>
+   </ul>
+
+  </div>
+
+  <div id="back"><a href="#home"></a></div>
+
+  <script type="text/javascript">
+    hljs.initHighlightingOnLoad();
+    skrollr.init();
+
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+    ga('create', 'UA-60995437-1', 'auto');
+    ga('send', 'pageview');
+  </script>
+
+  <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
+  <script type="text/javascript" src="https://b.st-hatena.com/js/bookmark_button.js" charset="utf-8" async="async"></script>
+</body>
+</html>
