--- a/index.html
+++ b/index.html
@@ -182,13 +182,11 @@ console.log(me.getLastFeeling()); // How do I feel last time?
       </a></li>
     </ul>
 
-   <div id="copyright" data-21930="opacity:0;" data-22000="opacity:1;">2014 &copy; yoshiko</div>
+   <div id="copyright" data-21930="opacity:0;" data-22000="opacity:1;">2016 &copy; daisuke</div>
 
    <ul id="share">
-     <li class="twitter"><a href="https://twitter.com/share" class="twitter-share-button" data-url="http://yoshiko-pg.github.io/" data-via="yoshiko_pg">Tweet</a></li>
 
      <li class="facebook"><iframe src="//www.facebook.com/plugins/like.php?href=http%3A%2F%2Fyoshiko-pg.github.io%2F&amp;width&amp;layout=button_count&amp;action=like&amp;show_faces=false&amp;share=false&amp;height=21" scrolling="no" frameborder="0" style="border:none; overflow:hidden; height:21px;" allowTransparency="true"></iframe></li>
-     <li class="hatena"><a href="http://b.hatena.ne.jp/entry/http://yoshiko-pg.github.io/" class="hatena-bookmark-button" data-hatena-bookmark-layout="standard-balloon" data-hatena-bookmark-lang="ja" title="このエントリーをはてなブックマークに追加"><img src="https://b.st-hatena.com/images/entry-button/button-only@2x.png" alt="このエントリーをはてなブックマークに追加" width="20" height="20" style="border: none;" /></a></li>
      <li class="github"><iframe src="http://ghbtns.com/github-btn.html?user=yoshiko-pg&repo=yoshiko-pg.github.io&type=watch&count=true" allowtransparency="true" frameborder="0" scrolling="0" width="110" height="20"></iframe></li>
    </ul>
 
