--- a/index.html
+++ b/index.html
@@ -172,13 +172,13 @@ console.log(me.getLastFeeling()); // How do I feel last time?
     <ul id="links" class="cf">
       </a></li>
       <li><a href="https://www.facebook.com/daisuke.atsumi.3" target="_blank">
-        <img src="img/link_facebook.png" alt="facebook" />
+        <img src="img/link_facebook.png" alt="" />
       </a></li>
       <li><a href="https://github.com/daisuke4696" target="_blank">
-        <img src="img/link_github.png" alt="github" />
+        <img src="img/link_github.png" alt="" />
       </a></li>
       <li><a href="mailto:daisuke.samuser.gmail.com" target="_blank">
-        <img src="img/link_mail.png" alt="mail" />
+        <img src="img/link_mail.png" alt="" />
       </a></li>
     </ul>
 
