--- a/index.html
+++ b/index.html
@@ -171,14 +171,14 @@ console.log(me.getLastFeeling()); // How do I feel last time?
 
     <ul id="links" class="cf">
       </a></li>
-      <li><a href="https://www.facebook.com/daisuke.atsumi.3" target="_blank">
-        <img src="img/link_facebook.png" alt="" />
+      <li><a href="https://www.facebook.com/daisuke.atsumi" target="_blank">
+        <img src="link_facebook.png" alt="facebook" />
       </a></li>
       <li><a href="https://github.com/daisuke4696" target="_blank">
-        <img src="img/link_github.png" alt="" />
+        <img src="link_github.png" alt="github" />
       </a></li>
       <li><a href="mailto:daisuke.samuser.gmail.com" target="_blank">
-        <img src="img/link_mail.png" alt="" />
+        <img src="link_mail.png" alt="mail" />
       </a></li>
     </ul>
 
