--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@ console.log(me.getLastFeeling()); // How do I feel last time?
 
     <ul id="links" class="cf">
       </a></li>
-      <li><a href="https://www.facebook.com/daisuke.atsumi" target="_blank">
+      <li><a href="https://www.facebook.com/daisuke.atsumi.3" target="_blank">
         <img src="link_facebook.png" alt="facebook" />
       </a></li>
       <li><a href="https://github.com/daisuke4696" target="_blank">
