--- a/index.html
+++ b/index.html
@@ -30,8 +30,6 @@
         <dd><i class="fa fa-folder-open"></i>home</dd>
         <dd class="file current">daisuke4696.github.io</dd>
         <dd><a href="#about"><i class="fa fa-folder"></i>about</a></dd>
-        <dd><a href="#works"><i class="fa fa-folder"></i>works</a></dd>
-        <dd><a href="#skills"><i class="fa fa-folder"></i>skills</a></dd>
         <dd><a href="#contact"><i class="fa fa-folder"></i>contact</a></dd>
       </dl>
     </div>
@@ -133,7 +131,7 @@ console.log(me.getLastFeeling()); // How do I feel last time?
           <br>
           渥美なので、あっつんて名前でやってます。<br>
           <br>
-          a href="http://goodpatch.com/jp" target="_blank">https://daisuke4696.github.io/</a>
+          <a href="https://daisuke4696.github.io" target="_blank">Goodpatch Inc.</a>
           </p>
         </div>
         <div class="text" data-8800="opacity:0;" data-9100="opacity:1;" data-10000="opacity:1;" data-10300="opacity:0;">
