--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@ console.log(me.getLastFeeling()); // How do I feel last time?
           <br>
           渥美なので、あっつんて名前でやってます。<br>
           <br>
-          ポートフォリオを見て気になった方は、<a href="contact.html">Contact</a>よりご連絡ください！
+          ポートフォリオを見て気になった方は、<a href="#contact">CONTACT</a>よりご連絡ください！
           </p>
         </div>
         <div class="text" data-8800="opacity:0;" data-9100="opacity:1;" data-10000="opacity:1;" data-10300="opacity:0;">
