--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
           <span>JavaScript</span>
         </div>
       </div>
+      
+      <meta name="description" content="あっつんのプロフィールページ">
 
       <div class="navi_menu">
         <div class="logo cf">
