--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8">
+  <meta name="description" content="あっつんのプロフィールページ">
   <title>daisuke4696.github.io</title>
   <script type="text/javascript">
     // smartphone
@@ -32,7 +33,6 @@
         </div>
       </div>
       
-      <meta name="description" content="あっつんのプロフィールページ">
 
       <div class="navi_menu">
         <div class="logo cf">
@@ -63,7 +63,7 @@
   <div id="bg1" data-3500="top:60%;" data-8000="top:-100%; display: block;" data-13000="display:none;"></div>
   <div class="white_text" data-4500="top:45%;" data-10000="top:100%;">"Hello, World"</div>
 
-  <div id="about" data-4500="top:100%;" data-8000="top:0%;" data-11300="top:0%;" data-14000="top:-100%;" data-16600="top:-100%;" data-16700="top:-200%">
+  <div id="about" data-4500="top:100%;" data-8000="top:0%;" data-11300="top:0%;" data-14000="top:-100%;" data-16600="top:-100%;" data-16700="top:-200%"></div>
     <h2>ABOUT</h2>
     <div class="wrap">
       <img src="img_0.jpg" alt="">
