--- a/index.html
+++ b/index.html
@@ -20,8 +20,6 @@
   <link rel="canonical" href="/">
 </head>
 <body>
-
-  
     
         <span id="navi_marker"
         data-7900="bottom:-5px;"
@@ -39,7 +37,7 @@
   <!--/ home -->
 
   <div id="bg1" data-3500="top:60%;" data-8000="top:-100%; display: block;" data-13000="display:none;"></div>
-  <div class="white_text" data-4500="top:45%;" data-10000="top:100%;">"Hello, World"</div>
+  <div class="white_text" data-4500="top:45%;" data-10000="top:100%;"></div>
 
   <div id="about" data-4500="top:100%;" data-8000="top:0%;" data-11300="top:0%;" data-14000="top:-100%;" data-16600="top:-100%;" data-16700="top:-200%"></div>
     <h2>ABOUT</h2>
